feat: Lighten end_to_end.yml workflow (#1243)
* Refactors end_to_end workflow

* Fixes end_to_end workflow

* Fixes harvest_latest_versions.py

* Fixes harvest_latest_versions.py

* Fixes harvest_latest_versions.py

* Removes end_to_end_big.yml and end_to_end_100.yml

* Adds consistent set of feeds as sample

* Removes random from harvest_latest_versions.py

* Updates master flag in queue_runner.sh

* Removes docs/END_TO_END.md

--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -13,8 +13,6 @@ on:
       - 'test_pack_dock.yml'
       - 'triage.yml'
       - 'end_to_end.yml'
-      - 'end_to_end_big.yml'
-      - 'end_to_end_100.yml'
 concurrency:
   group: ${{ github.head_ref }}
   cancel-in-progress: true
@@ -147,7 +145,7 @@ jobs:
       - name: Run validators on queued URLs
         run: |
           queue="${{ matrix.data }}"
-          bash ./scripts/queue_runner.sh $queue
+          bash ./scripts/queue_runner.sh --include-master $queue
         env:
           OUTPUT_BASE: ${{ github.sha }}
       - name: Persist reports
