Add MACOS_ prefix to all codesigning secrets.

--- a/.github/workflows/package_installers.yml
+++ b/.github/workflows/package_installers.yml
@@ -46,16 +46,16 @@ jobs:
       # app will be signed as part of the jpackage build phase.
       - name: "MacOS - Import Certificate: Developer ID Application"
         if: matrix.os == 'macos-latest' && (github.event_name == 'push' || github.event_name == 'release')
-        uses: devbotsxyz/import-signing-certificate@main
+        uses: devbotsxyz/import-signing-certificate@v1
         with:
           # This should be a certificate + private key, exported as a p12 file and base64 encoded as
           # a GitHub secret.  The certificate should be the:
           # 'Developer ID Application: The International Data Organization For Transport (BF2U75HN4D)'
           # certificate, locked with the specified passphrase.
-          certificate-data: ${{ secrets.DEVELOPER_ID_APPLICATION_CERTIFICATE_P12_BASE64 }}
-          certificate-passphrase: ${{ secrets.DEVELOPER_ID_APPLICATION_CERTIFICATE_PASSWORD }}
+          certificate-data: ${{ secrets.MACOS_DEVELOPER_ID_APPLICATION_CERTIFICATE_P12_BASE64 }}
+          certificate-passphrase: ${{ secrets.MACOS_DEVELOPER_ID_APPLICATION_CERTIFICATE_PASSWORD }}
           # The resulting keychain will be locked with this separate password.
-          keychain-password: ${{ secrets.KEYCHAIN_PASSWORD }}
+          keychain-password: ${{ secrets.MACOS_KEYCHAIN_PASSWORD }}
 
       - name: "Package GUI app installer with Gradle"
         uses: gradle/gradle-build-action@v2
@@ -72,10 +72,10 @@ jobs:
           product-path: "app/pkg/build/jpackage/GTFS Validator.app"
           # The Apple developer account used to run notarization.  This account will receive an
           # email every time notarization is run.
-          appstore-connect-username: ${{ secrets.NOTARIZATION_USERNAME }}
+          appstore-connect-username: ${{ secrets.MACOS_NOTARIZATION_USERNAME }}
           # The app-specific password configured for the Apple developer account that will be used
           # for authentication (different from the main password for the dev account).
-          appstore-connect-password: ${{ secrets.NOTARIZATION_PASSWORD }}
+          appstore-connect-password: ${{ secrets.MACOS_NOTARIZATION_PASSWORD }}
 
       # Now that we have a notarization report, we attach it to the app binary.
       - name: "Mac OS - Staple Release Build"
