--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -6,7 +6,7 @@ body:
 - type: markdown
   attributes:
     value: >
-      #### Before submitting a bug, please make sure there isn't already an [existing issue open](https://github.com/MobilityData/gtfs-validator/issues).
+      #### Before submitting a bug, please make sure there isn't already an [existing issue open](https://github.com/MobilityData/gtfs-validator/issues?q=is%3Aopen+is%3Aissue+label%3Abug).
 - type: textarea
   attributes:
     label: Describe the bug
