--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -6,7 +6,7 @@ body:
 - type: markdown
   attributes:
     value: >
-      #### Before submitting a new feature idea, please make sure there isn't already an [existing issue open](https://github.com/MobilityData/gtfs-validator/issues).
+      #### Before submitting a new feature idea, please make sure there isn't already an [existing issue open](https://github.com/MobilityData/gtfs-validator/issues?q=is%3Aopen+is%3Aissue+label%3Aenhancement+).
 - type: textarea
   attributes:
     label: Describe the problem.
