--- a/.github/ISSUE_TEMPLATE/new-validation-rule.yml
+++ b/.github/ISSUE_TEMPLATE/new-validation-rule.yml
@@ -21,9 +21,10 @@ body:
     description: >
       How would you like the new validation rule to work? If possible, describe the new logic, or provide pseudo code for how this rule would work.
     placeholder: |
-      Example: If:
-                 [`stop_lat` OR `stop_lon` = ''] AND [location_type = [0 OR 1 OR 2]]: 
-                    trigger a `missing_stop_coordinates` notice
+      Example: 
+      If:
+        [`stop_lat` OR `stop_lon` = ''] AND [location_type = [0 OR 1 OR 2]]: 
+            trigger a `missing_stop_coordinates` notice
   validations:
     required: true
     
