--- a/.github/ISSUE_TEMPLATE/new-validation-rule.yml
+++ b/.github/ISSUE_TEMPLATE/new-validation-rule.yml
@@ -9,7 +9,7 @@ body:
       #### Before submitting a new rule idea, please make sure there isn't already an [existing issue open](https://github.com/MobilityData/gtfs-validator/issues?q=is%3Aopen+is%3Aissue+label%3A%22new+rule%22).
 - type: textarea
   attributes:
-    label: Describe the problem.
+    label: Describe the problem
     description: >
       What problem in GTFS datasets does this new rule address? Please describe.
   validations:
@@ -17,7 +17,7 @@ body:
 
 - type: textarea
   attributes:
-    label: Describe the new validation rule.
+    label: Describe the new validation rule
     description: >
       How would you like the new validation rule to work? If possible, describe the new logic, or provide pseudo code for how this rule would work.
     placeholder: |
@@ -30,7 +30,7 @@ body:
     
 - type: textarea
   attributes:
-    label: Sample GTFS datasets.
+    label: Sample GTFS datasets
     description: >
       Provide relevant sample GTFS datasets. You can drag-and-drop the file in this box to upload it.
   validations:
@@ -38,7 +38,7 @@ body:
 
 - type: textarea
   attributes:
-    label: Severity.
+    label: Severity
     description: >
       What should be the severity of this rule? See the definition for rule severities in [RULES.md](https://github.com/MobilityData/gtfs-validator/blob/master/RULES.md#the-severity-of-a-notice).
   validations:
@@ -46,6 +46,6 @@ body:
 
 - type: textarea
   attributes:
-    label: Additional context.
+    label: Additional context
   validations:
     required: false
