--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -9,7 +9,7 @@ body:
       #### Before submitting a new feature idea, please make sure there isn't already an [existing issue open](https://github.com/MobilityData/gtfs-validator/issues?q=is%3Aopen+is%3Aissue+label%3Aenhancement+).
 - type: textarea
   attributes:
-    label: Describe the problem.
+    label: Describe the problem
     description: >
       Describe what you are trying to achieve, and how this tool makes it more difficult. Describe the other means you currently use to get the job done or to have the information you need.
   validations:
@@ -17,7 +17,7 @@ body:
 
 - type: textarea
   attributes:
-    label: Proposed solution.
+    label: Proposed solution
     description: >
       A clear and concise description of what you want to happen.
   validations:
@@ -25,7 +25,7 @@ body:
     
 - type: textarea
   attributes:
-    label: Alternatives you've considered.
+    label: Alternatives you've considered
     description: >
       If relevant, describe any alternatives you've considered.
   validations:
@@ -33,7 +33,7 @@ body:
 
 - type: textarea
   attributes:
-    label: Additional context.
+    label: Additional context
     description: >
       Additional context that can help us better understand your need.
   validations:
