--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -19,7 +19,8 @@ body:
   attributes:
     label: Steps/Code to Reproduce
     description: |
-      Please add the steps that can reproduce the problem. We acknowledge that this step requires some effort on your side, but it really helps the project maintainers quickly reproduce the bug and understand the problem. More precise bug report tends to be solved more quickly because it avoids back-and-forth discussion between the maintainers and the reporter. Example:
+      Please add the steps that can reproduce the problem. We acknowledge that this step requires some effort on your side, but it really helps the project maintainers quickly reproduce the bug and understand the problem. More precise bug report tends to be solved more quickly because it avoids back-and-forth discussion between the maintainers and the reporter. 
+      Example:
 
       - Open the terminal 
       - Navigate to the directory containing the JAR file and the GTFS dataset using the following command `cd Data/Unvalidated`
