--- a/.github/workflows/triage.yml
+++ b/.github/workflows/triage.yml
@@ -15,11 +15,11 @@ jobs:
           column: Requires investigation
           repo-token: ${{ secrets.TRIAGE_TOKEN }}
       - name: Comment issue
-        uses: actions/github-script@v4
+        uses: actions/github-script@v6
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
-            github.issues.createComment({
+            github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
