--- a/processor/build.gradle
+++ b/processor/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     implementation 'com.univocity:univocity-parsers:2.9.0'
     implementation 'com.google.geometry:s2-geometry:2.0.0'
     testImplementation group: 'junit', name: 'junit', version: '4.13'
+    testImplementation 'com.google.truth:truth:1.0.1'
 }
 
 test {
