--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -82,7 +82,10 @@ jobs:
       matrix: ${{ steps.set-matrix.outputs.matrix }}
   run-on-data:
     needs: [ fetch-urls, pack-snapshot ]
-    runs-on: ubuntu-latest
+    runs-on: 
+      # We use machines with more memory to run validation, as large feeds
+      # can consume too much heap for default machine instances (see #1304).
+      group: ubuntu-latest-4-cores
     strategy:
       matrix: ${{ fromJson(needs.fetch-urls.outputs.matrix) }}
     steps:
