--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -85,7 +85,7 @@ jobs:
     runs-on: 
       # We use machines with more memory to run validation, as large feeds
       # can consume too much heap for default machine instances (see #1304).
-      label: ubuntu-latest-4-cores
+      labels: ubuntu-latest-4-cores
     strategy:
       matrix: ${{ fromJson(needs.fetch-urls.outputs.matrix) }}
     steps:
