Initial entry for notice schema generation from source code.

--- a/settings.gradle
+++ b/settings.gradle
@@ -7,5 +7,6 @@ include 'processor'
 include 'processor:tests'
 include 'main'
 include 'output-comparator'
+include 'notice-schema-generator'
 include 'tests'
 
