Add a unit test that verifies that every Notice has an entry in RULES.md.

--- a/main/build.gradle
+++ b/main/build.gradle
@@ -58,9 +58,16 @@ dependencies {
     testImplementation 'org.mockito:mockito-core:4.5.1'
 }
 
+// A custom task to copy RULES.md into the test resource directory so that we can reference it in
+// unit tests.  See NoticeDocumentationTest for more details.
+tasks.register('copyRulesMarkdown', Copy) {
+    from "$rootDir/RULES.md"
+    into "$projectDir/build/resources/test"
+}
+
 test {
     // Always run tests, even when nothing changed.
-    dependsOn 'cleanTest'
+    dependsOn 'cleanTest', 'copyRulesMarkdown'
 
     // Show test results.
     testLogging {
