--- a/core/build.gradle
+++ b/core/build.gradle
@@ -27,6 +27,7 @@ repositories {
 }
 
 dependencies {
+    implementation project(':model')
     annotationProcessor 'com.google.auto.value:auto-value:1.7.4'
     compileOnly 'com.google.auto.value:auto-value-annotations:1.7.4'
     implementation 'org.apache.commons:commons-compress:1.20'
