--- a/output-comparator/build.gradle
+++ b/output-comparator/build.gradle
@@ -11,6 +11,7 @@ repositories {
 }
 
 dependencies {
+    implementation project(':model')
     implementation project(':core')
     implementation 'commons-io:commons-io:2.8.0'
     implementation 'com.google.api-client:google-api-client:1.31.2'
