Initial entry for processor:notices module, with support for documentation extraction for notices.

--- a/main/build.gradle
+++ b/main/build.gradle
@@ -37,6 +37,7 @@ publishing {
 }
 
 dependencies {
+    annotationProcessor project(':processor:notices')
     annotationProcessor project(':processor')
     compileOnly project(':processor')
     implementation project(':model')
