--- a/processor/notices/build.gradle
+++ b/processor/notices/build.gradle
@@ -16,11 +16,10 @@
 
 plugins {
     id 'java'
-    id 'maven-publish'
 }
 
 sourceCompatibility = JavaVersion.VERSION_11
-compileTestJava.options.encoding = "UTF-8"
+compileJava.options.encoding = "UTF-8"
 
 repositories {
     mavenCentral()
@@ -28,43 +27,13 @@ repositories {
 
 dependencies {
     implementation project(':model')
-    annotationProcessor project(':processor:notices')
-    annotationProcessor 'com.google.auto.value:auto-value:1.7.4'
-    compileOnly 'com.google.auto.value:auto-value-annotations:1.7.4'
-    implementation 'org.apache.commons:commons-compress:1.20'
+    annotationProcessor 'com.google.auto.service:auto-service:1.0.1'
+    compileOnly 'com.google.auto.service:auto-service:1.0.1'
     implementation 'org.apache.commons:commons-lang3:3.0'
-    implementation 'javax.inject:javax.inject:1'
-    implementation 'org.apache.httpcomponents:httpclient:4.5.2'
-    implementation 'commons-io:commons-io:2.8.0'
-    implementation 'com.univocity:univocity-parsers:2.9.0'
-    implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'com.google.geometry:s2-geometry:2.0.0'
     implementation 'com.google.guava:guava:31.0.1-jre'
-    implementation 'commons-validator:commons-validator:1.6'
-    implementation 'com.googlecode.libphonenumber:libphonenumber:8.12.13'
-    implementation 'com.google.flogger:flogger:0.6'
-    implementation 'io.github.classgraph:classgraph:4.8.146'
-    testImplementation 'com.google.flogger:flogger-system-backend:0.6'
+    implementation 'com.google.code.gson:gson:2.8.6'
     testImplementation group: 'junit', name: 'junit', version: '4.13'
-    testImplementation "com.google.truth:truth:1.0.1"
-    testImplementation 'com.google.truth.extensions:truth-java8-extension:1.0.1'
-}
-
-jar {
-    manifest {
-        attributes('Implementation-Title': 'gtfs-validator-core',
-                'Implementation-Version': project.version)
-    }
-}
-
-publishing {
-    publications {
-        mavenJava(MavenPublication) {
-            artifactId = 'gtfs-validator-core'
-
-            from components.java
-        }
-    }
+    testImplementation 'com.google.truth:truth:1.1.3'
 }
 
 test {
@@ -75,14 +44,6 @@ test {
     testLogging {
         events "passed", "skipped", "failed"
     }
-}
-
-compileJava {
-    options.compilerArgs << '-parameters'
-}
-
-compileTestJava {
-    options.compilerArgs << '-parameters'
 }
 
 // Share the test report data to be aggregated for the whole project
