--- a/.gitignore
+++ b/.gitignore
@@ -86,3 +86,8 @@ build/
 */.DS_Store
 .DS_Store
 .nosync
+
+# Web Validator Authentication Credential
+web/service/src/main/resources/web-based-gtfs-validator-a088ec5f045d.json
+
+processor/tests/bin
