Add StorageHelper tests, correct capitalization

--- a/web/service/src/test/resources/application-test.properties
+++ b/web/service/src/test/resources/application-test.properties
@@ -1,2 +1,4 @@
 ## GCP
 spring.cloud.gcp.credentials.location=classpath:web-based-gtfs-validator.json
+spring.cloud.gcp.project-id=web-based-gtfs-validator
+logging.level.org.springframework.web=INFO
