--- a/.github/workflows/test_pack_doc.yml
+++ b/.github/workflows/test_pack_doc.yml
@@ -37,22 +37,14 @@ jobs:
       - name: Run tests on Java ${{ matrix.java_version }} and ${{ matrix.os }}
         uses: gradle/gradle-build-action@v2
         with:
-          arguments: testReport
-      - name: Persist **Passing** tests merged report - Java ${{ matrix.java_version }} on ${{ matrix.os }}
-        uses: actions/upload-artifact@v3
-        with:
-          name: Test report - Java ${{ matrix.java_version }} on ${{ matrix.os }}
-          path: build/reports/allTests/
-      - name: Persist **Failing** tests unmerged reports - Java ${{ matrix.java_version }} on ${{ matrix.os }}
+          # We run test aggregation with --continue to make sure all tests run, even if some fail.
+          arguments: testAggregateTestReport --continue
+      - name: Persist aggregated test reports on failure - Java ${{ matrix.java_version }} on ${{ matrix.os }}
         if: ${{ failure() }}
         uses: actions/upload-artifact@v3
         with:
           name: Test report - Java ${{ matrix.java_version }} on ${{ matrix.os }}
-          path: |
-            cli/build/reports/tests/
-            core/build/reports/tests/
-            main/build/reports/tests/
-            processor/build/reports/tests/
+          path: build/reports/tests/unit-test/aggregated-results/
 
   package:
     needs: [test]
