--- a/web/service/build.gradle
+++ b/web/service/build.gradle
@@ -55,6 +55,7 @@ dependencies {
 	implementation 'com.google.cloud:spring-cloud-gcp-starter-storage'
   implementation 'org.projectlombok:lombok:1.18.22'
   implementation 'org.projectlombok:lombok:1.18.22'
+  implementation 'io.sentry:sentry-spring:1.7.30'
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
