--- a/main/build.gradle
+++ b/main/build.gradle
@@ -19,13 +19,6 @@ plugins {
     id 'maven-publish'
 }
 
-sourceCompatibility = JavaVersion.VERSION_11
-compileJava.options.encoding = "UTF-8"
-
-repositories {
-    mavenCentral()
-}
-
 publishing {
     publications {
         mavenJava(MavenPublication) {
@@ -68,26 +61,6 @@ tasks.register('copyRulesMarkdown', Copy) {
 }
 
 test {
-    // Always run tests, even when nothing changed.
-    dependsOn 'cleanTest', 'copyRulesMarkdown'
-
-    // Show test results.
-    testLogging {
-        events "passed", "skipped", "failed"
-    }
-
-    systemProperty 'gtfsValidatorVersionForTest', project.version
-}
-
-// Share the test report data to be aggregated for the whole project
-configurations {
-    binaryTestResultsElements {
-        canBeResolved = false
-        canBeConsumed = true
-        attributes {
-            attribute(Category.CATEGORY_ATTRIBUTE, objects.named(Category, Category.DOCUMENTATION))
-            attribute(DocsType.DOCS_TYPE_ATTRIBUTE, objects.named(DocsType, 'test-report-data'))
-        }
-        outgoing.artifact(test.binaryResultsDirectory)
-    }
+    // Make sure `copyRulesMarkdown` runs before we run any tests.
+    dependsOn 'copyRulesMarkdown'
 }
