feat: add newrelic agent to web service

--- a/.gitignore
+++ b/.gitignore
@@ -93,4 +93,7 @@ web/service/src/main/resources/web-based-gtfs-validator-a088ec5f045d.json
 # Web Validator Service Sentry Settings
 web/service/src/main/resources/sentry.properties
 
+# Web Validator Service New Relic Settings
+web/service/newrelic/newrelic.yml
+
 processor/tests/bin
