prd.env: define CLOUDSDK_CORE_PROJECT
This is a critical element in describing the production environment.

--- a/web/pipeline/prd.env
+++ b/web/pipeline/prd.env
@@ -1,3 +1,4 @@
+CLOUDSDK_CORE_PROJECT=web-based-gtfs-validator
 WEB_BUILD_ENV=prd
 WEB_DEPLOY_CLIENT_BUCKET=gtfs-validator-web
 WEB_DEPLOY_SVC_IMAGE=gcr.io/web-based-gtfs-validator/gtfs-validator-web
