web/service: remove default value for CURRENT_VERSION
Allowing the build to fail on an unspecified version number is
preferable to using an arbitrary default which is highly likely to be
incorrect.

--- a/web/service/Dockerfile
+++ b/web/service/Dockerfile
@@ -8,7 +8,8 @@ USER spring:spring
 ARG JAR_FILES=build/libs/\*.jar
 ARG PROPERTIES_FILE=build/resources/main/application.properties
 ARG CREDS_FILE=src/main/resources/web-based-gtfs-validator-a088ec5f045d.json
-ARG CURRENT_VERSION=4.0.1-SNAPSHOT
+ARG CURRENT_VERSION
+RUN test -n "$CURRENT_VERSION" || { echo "missing required build arg: CURRENT_VERSION"; exit 1; }
 ENV CURRENT_VERSION=${CURRENT_VERSION}
 
 COPY ${JAR_FILES} /
