--- a/web/service/cloudbuild.yaml
+++ b/web/service/cloudbuild.yaml
@@ -19,4 +19,4 @@ images:
 substitutions:
   _WEB_DEPLOY_SVC_IMAGE: gcr.io/web-based-gtfs-validator/gtfs-validator-web
   _WEB_DEPLOY_SVC_CLOUDRUN: gtfs-validator-web
-  _CURRENT_VERSION: 4.0.1-SNAPSHOT
+  _CURRENT_VERSION: ''
