--- a/.github/workflows/web_client_merge.yml
+++ b/.github/workflows/web_client_merge.yml
@@ -36,10 +36,13 @@ jobs:
         with:
           node-version: 16
 
-      - uses: google-github-actions/setup-gcloud@v0
+      - uses: google-github-actions/auth@v1
         with:
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          export_default_credentials: true
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - uses: google-github-actions/setup-gcloud@v1
+        with:
+          version: '>= 390.0.0'
 
       - name: run gradle tasks
         shell: bash
