--- a/.github/workflows/cypress_e2e_tests.yml
+++ b/.github/workflows/cypress_e2e_tests.yml
@@ -1,6 +1,10 @@
 name: Cypress E2E Tests
 
-on: push
+on:
+  pull_request:
+      branches: [ master ]
+      paths:
+        - 'web/client/**'
 
 jobs:
   cypress-run:
