--- a/.github/workflows/acceptance_test.yml
+++ b/.github/workflows/acceptance_test.yml
@@ -13,6 +13,7 @@ on:
       - 'test_pack_dock.yml'
       - 'triage.yml'
       - 'end_to_end.yml'
+      - 'web/**'
 concurrency:
   group: ${{ github.head_ref }}
   cancel-in-progress: true
